# project-mngt-rust-graphql-actix

./: Cargo.toml  README.md
src/: main.rs
src/config/: mongo.rs
src/handler/: graphql_handler.rs  mod.rs
src/models/: mod.rs  project_model.rs  schema.rs  schema_graphql.rs
src/schemas/: mod.rs  project_schema.rs
