[package]
name = "project-mngt-rust-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.9"
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 